--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </p>
           <aside>
             <p>
-              <span><strong>Read Time:</strong> 4 Minutes</span
+              <span ><strong>Read Time:</strong> 4 Minutes</span
               ><a href="#">Read more...</a>
             </p>
           </aside>
@@ -104,5 +104,6 @@
       </section>
     </main>
     <footer>© 2021 Travel Blog, LLC.</footer>
+    <script differ src ="index_spec.js"></script>
   </body>
 </html>
