--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="./main.js"></script>
   </head>
   <body>
     <header>
@@ -80,7 +81,7 @@
               <span><strong>Read Time:</strong> 3 Minutes</span
               ><a href="#">Read more...</a>
             </p>
-          </aside>
+          </z>
         </article>
         <article>
           <img
