almost done - was forgetting to use querySelectorAll vs querySelectror for grabbing the posts and removing the last - causing an error

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src = "./main.js"></script>
   </head>
   <body>
     <header>
@@ -104,6 +105,5 @@
       </section>
     </main>
     <footer>© 2021 Travel Blog, LLC.</footer>
-    <script src = "./main.js"></script>
   </body>
 </html>
