--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <script defer src='./main.js'></script>
     <header>
       <h1>My Travel Blog</h1>
       <nav>
