--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="main.js"></script>
   </head>
   <body>
     <header>
       <h1>My Travel Blog</h1>
       <nav>
         <ul>
-          <li>
+          <li class="posts">
             <a href="#">All Posts</a>
           </li>
           <li>
@@ -37,7 +38,7 @@
             perfect list of what to bring on all of my excursions.
           </p>
           <aside>
-            <p>
+            <p id="read">
               <span><strong>Read Time:</strong> 4 Minutes</span
               ><a href="#">Read more...</a>
             </p>
@@ -50,7 +51,7 @@
             src="./images/jake-blucker-unsplash.jpg"
             alt="Image of a winding road."
           />
-          <h3>Games to Play on the Road</h3>
+          <h3 class="titles">Games to Play on the Road</h3>
           <p>
             Traveling with others is always better than traveling along, in my
             opinion. I don't mind the quiet, but sometimes it's nice to have a
@@ -68,7 +69,7 @@
             src="./images/andre-benz-unsplash.jpg"
             alt="Image of buildings on the coast."
           />
-          <h3>Take in the Architecture</h3>
+          <h3 class="titles">Take in the Architecture</h3>
           <p>
             It's easy to run from place to place when in a new country. I'm
             guilty of rushing to the nearest museum as soon as I land! But,
@@ -82,7 +83,7 @@
             </p>
           </aside>
         </article>
-        <article>
+        <article class="lastPost">
           <img
             src="./images/paul-gilmore-unsplash.jpg"
             alt="Image of a mountain in front of a lake."
