--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.js"/>
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="main.js"></script>
   </head>
   <body>
     <header>
@@ -13,7 +15,7 @@
       <nav>
         <ul>
           <li>
-            <a href="#">All Posts</a>
+            <a class ="ap" href="#">All Posts</a>
           </li>
           <li>
             <a href="#">Contact Me</a>
