--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="./main.js"></script>
   </head>
   <body>
     <header>
       <h1>My Travel Blog</h1>
       <nav>
         <ul>
-          <li>
+          <li id="all-posts">
             <a href="#">All Posts</a>
           </li>
           <li>
@@ -82,7 +83,7 @@
             </p>
           </aside>
         </article>
-        <article>
+        <article id="stop-planning">
           <img
             src="./images/paul-gilmore-unsplash.jpg"
             alt="Image of a mountain in front of a lake."
