--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@
       </section>
     </main>
     <footer>© 2021 Travel Blog, LLC.</footer>
+    <script defer src="./main.js"></script>
   </body>
 </html>
