--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="./main.js"></script>
   </head>
   <body>
     <header>
@@ -104,5 +105,6 @@
       </section>
     </main>
     <footer>© 2021 Travel Blog, LLC.</footer>
+
   </body>
 </html>
