--- a/index.html
+++ b/index.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+    <script defer src="./main.js"></script>
+</head>
+
+<body>
     <header>
-      <h1>My Travel Blog</h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="#">All Posts</a>
-          </li>
-          <li>
-            <a href="#">Contact Me</a>
-          </li>
-        </ul>
-      </nav>
+        <h1>My Travel Blog</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">All Posts</a>
+                </li>
+                <li>
+                    <a href="#">Contact Me</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <section class="featured">
-        <img
-          src="./images/rana-sawalha-unsplash.jpg"
-          alt="Image of travel items."
-        />
-        <article>
-          <h2>What I Bring on My Travels</h2>
-          <p>
-            There are so many different ways to travel. From jumping in your car
-            and just going to taking months to meticulously plan the perfect
-            trip, everyone has their favorite recipe for a life-changing
-            vacation. It's taken some time, but I feel like I finally have the
-            perfect list of what to bring on all of my excursions.
-          </p>
-          <aside>
-            <p>
-              <span><strong>Read Time:</strong> 4 Minutes</span
+        <section class="featured">
+            <img src="./images/rana-sawalha-unsplash.jpg" alt="Image of travel items." />
+            <article>
+                <h2>What I Bring on My Travels</h2>
+                <p>
+                    There are so many different ways to travel. From jumping in your car and just going to taking months to meticulously plan the perfect trip, everyone has their favorite recipe for a life-changing vacation. It's taken some time, but I feel like I finally
+                    have the perfect list of what to bring on all of my excursions.
+                </p>
+                <aside>
+                    <p>
+                        <span><strong>Read Time:</strong> 4 Minutes</span
               ><a href="#">Read more...</a>
             </p>
           </aside>
