adding first js document to html

--- a/index.html
+++ b/index.html
@@ -106,3 +106,7 @@
     <footer>© 2021 Travel Blog, LLC.</footer>
   </body>
 </html>
+
+  <!-- linking our JS document to our html -->
+  <script src="./main.js"></script>
+</html>
