--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
+    <script defer src="./main.js"> </script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -87,7 +88,7 @@
             src="./images/paul-gilmore-unsplash.jpg"
             alt="Image of a mountain in front of a lake."
           />
-          <h3>Stop Planning</h3>
+          
           <p>
             You -- yes you! You're an over-planner, I can tell. It's time to
             stop planning so much and instead focusing on relaxing. Taking a
