needed all the help

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <header>
       <h1>My Travel Blog</h1>
@@ -104,5 +105,6 @@
       </section>
     </main>
     <footer>© 2021 Travel Blog, LLC.</footer>
-  </body>
+    <script src="./main.js">
+    </script> </body>
 </html>
