--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-
-  <body>
-    <header>
+ 
+  <script src="./main.js">
+  </script> 
+  </head><body>
+  <header>
       <h1>My Travel Blog</h1>
       <nav>
         <ul>
@@ -105,6 +106,5 @@
       </section>
     </main>
     <footer>© 2021 Travel Blog, LLC.</footer>
-    <script src="./main.js">
-    </script> </body>
+  </body>
 </html>
