--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <script defer src="./main.js"></script>
   <body>
     <header>
       <h1>My Travel Blog</h1>
