--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="./main.js" defer></script>
   </head>
   <body>
     <header>
@@ -27,6 +28,7 @@
           src="./images/rana-sawalha-unsplash.jpg"
           alt="Image of travel items."
         />
+    
         <article>
           <h2>What I Bring on My Travels</h2>
           <p>
