--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Blog</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="main.js" ></script>
+    <script src="main.js"></script>
+    <script>prompt("effefsd")</script>
   </head>
   <body>
     <header>
